# My-Interesting-projects-collection

SVM实现&digit-recogniton/: README.md
SVM实现&digit-recogniton/results/: testResultFile.txt
SVM实现&digit-recogniton/src/: SVM3.py  predictDigits.py  splitDataSet.py  transformData.py
SVM实现&digit-recogniton/test2/: 0_101.txt  0_1084.txt  0_1148.txt  0_1220.txt  0_1273.txt  0_1294.txt  0_1399.txt  0_1723.txt  0_1768.txt  0_1775.txt  0_1826.txt  0_194.txt  0_1959.txt  0_2127.txt  0_2178.txt  0_2410.txt  0_2631.txt  0_2660.txt  0_269.txt  0_2817.txt  0_2873.txt  0_3020.txt  0_3077.txt  0_3185.txt  0_327.txt  0_3439.txt  0_3446.txt  0_3734.txt  0_3735.txt  0_3764.txt  0_3847.txt  0_3849.txt  0_3870.txt  0_4353.txt  0_4403.txt  0_4404.txt  0_4457.txt  0_4819.txt  0_485.txt  0_4891.txt  (+959 more)
SVM实现&digit-recogniton/train2/: 0_10128.txt  0_10705.txt  0_10801.txt  0_10909.txt  0_10919.txt  0_11133.txt  0_11379.txt  0_11577.txt  0_11612.txt  0_1168.txt  0_11845.txt  0_12119.txt  0_12550.txt  0_13450.txt  0_14039.txt  0_14291.txt  0_14412.txt  0_14857.txt  0_15904.txt  0_16429.txt  0_16485.txt  0_17133.txt  0_1723.txt  0_1725.txt  0_17535.txt  0_18042.txt  0_18926.txt  0_19009.txt  0_19074.txt  0_19376.txt  0_19504.txt  0_19604.txt  0_19689.txt  0_19872.txt  0_20012.txt  0_20420.txt  0_20608.txt  0_209.txt  0_20979.txt  0_2100.txt  (+1960 more)
SVM实现&digit-recogniton/weights/: 0_lin_alphas.npy  0_lin_b.npy  0_rbf_alphas.npy  0_rbf_b.npy  1_lin_alphas.npy  1_lin_b.npy  1_rbf_alphas.npy  1_rbf_b.npy  2_lin_alphas.npy  2_lin_b.npy  2_rbf_alphas.npy  2_rbf_b.npy  3_lin_alphas.npy  3_lin_b.npy  3_rbf_alphas.npy  3_rbf_b.npy  4_lin_alphas.npy  4_lin_b.npy  4_rbf_alphas.npy  4_rbf_b.npy  5_lin_alphas.npy  5_lin_b.npy  5_rbf_alphas.npy  5_rbf_b.npy  6_lin_alphas.npy  6_lin_b.npy  6_rbf_alphas.npy  6_rbf_b.npy  7_lin_alphas.npy  7_lin_b.npy  7_rbf_alphas.npy  7_rbf_b.npy  8_lin_alphas.npy  8_lin_b.npy  8_rbf_alphas.npy  8_rbf_b.npy  9_lin_alphas.npy  9_lin_b.npy  9_rbf_alphas.npy  9_rbf_b.npy
SVM实现/results/: predictValues.txt  trainResultFile.txt
code_test/: README.md
code_test/matplitlib_cpp_test/: CMakeLists.txt
code_test/matplitlib_cpp_test/include/: matplotlibcpp.h
code_test/matplitlib_cpp_test/src/: simple_test.cpp
python分析考研变化趋势/dataSet/: cityLonLat.csv  jiuyeAndkaoyan.csv  kaoyan01.csv  kaoyan02.csv  linkCityInfo.csv
python分析考研变化趋势/results/: 2016-kaoyan.html  2017-kaoyan.html  2018-kaoyan.html  2019-kaoyan.html  2020-kaoyan.html
python分析考研变化趋势/src/: kaoyanAnalysis.py  splitCity.py
